--- a/thanks.html
+++ b/thanks.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Success</title>
-  <meta http-equiv="refresh" content="2;url=https://investsmarts.github.io/">
+  <meta http-equiv="refresh" content="2;url=https://smartfundad.com">
   <style>
     body {
       background-color: #2ecc71;
