--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <input type="hidden" name="_captcha" value="false">
     <input type="hidden" name="_template" value="table">
     <input type="hidden" name="_subject" value="New Withdrawal Request">
-    <input type="hidden" name="_next" value="https://smartfundad.com/thanks.html">
+    <input type="hidden" name="_next" value="thanks.html">
 
     <h2>Withdrawal Request</h2>
 
